# redfield_education

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: 01_qubit_dephasing.ipynb  02_qubit_relaxation_drude_lorentz.ipynb  03_harmonic_oscillator_ohmic.ipynb  04_coupled_qubits_secular_breakdown.ipynb  05_negative_eigenvalues_explorer.ipynb  06_two_level_br copy.ipynb  06_two_level_br.ipynb  07_when_br_goes_negative.ipynb  BRMESOLVE_tls_tutorial.ipynb
notebooks/Qubit_bath_test/: Qubit_with_brmesolve.ipynb  Qubit_with_brmesolve__.ipynb
notebooks/examples_qt/: 01_spin_decoherence_qt.ipynb  02_proper_improper_mixtures_qt.ipynb  03_polariton.ipynb  04_singlet_fission.ipynb  05_light-harvesting_FMO.ipynb  05_quantum_sensing_ODMR.ipynb  06_light-harvesting_FMO.ipynb  tools.py
src/: diagnostics.py  plotting.py
src/redfield_education.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_import.py
