[project]
name = "redfield-education"
version = "0.1.0"
description = "Educational Bloch-Redfield equation examples with QuTiP"
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "qutip>=5.0.0",
  "numpy",
  "scipy",
  "matplotlib",
  "tqdm"
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "black", "ruff"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
