[project]
name = "redfield-education"
version = "1.0"
description = "Educational Bloch-Redfield equation examples with QuTiP"
keywords = ["quantum", "physics", "simulation", "Redfield", "Open Quantum Systems", "OQS"]

readme = "README.md"
requires-python = ">=3.10"

authors = [{name = "Leopold Bodamer", email = "leopold.bodamer@student.uni-tuebingen.de"}]

dependencies = [
  "qutip>=5.0.0",
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "black", "ruff"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
